--- a/v1/Dockerfile
+++ b/v1/Dockerfile
@@ -16,12 +16,12 @@ COPY . .
 # Build cmd
 RUN CGO_ENABLED=0 GO111MODULE=on go build -mod vendor -o /plugin main.go
 
-# we use alpine for easier debugging
-FROM alpine
+# # we use alpine for easier debugging
+# FROM alpine
 
-# Set root path as working directory
-WORKDIR /
+# # Set root path as working directory
+# WORKDIR /
 
-COPY --from=builder /plugin .
+# COPY --from=builder /plugin .
 
-ENTRYPOINT ["/plugin"]
+# ENTRYPOINT ["/plugin"]
