--- a/v1/Dockerfile
+++ b/v1/Dockerfile
@@ -4,15 +4,13 @@ FROM golang:1.18 as builder
 # Make sure we use go modules
 WORKDIR vcluster
 
-COPY go.mod .
-COPY go.sum .
-
-# Install dependencies
-RUN go mod vendor
+# COPY go.mod .
+# COPY go.sum .
 
 # Copy the Go Modules manifests
 COPY . .
-
+# Install dependencies
+RUN go mod vendor
 # Build cmd
 RUN CGO_ENABLED=0 GO111MODULE=on go build -mod vendor -o /plugin main.go
 
