--- a/v1/Dockerfile
+++ b/v1/Dockerfile
@@ -3,10 +3,6 @@ FROM golang:1.18 as builder
 
 # Make sure we use go modules
 WORKDIR vcluster
-
-# COPY go.mod .
-# COPY go.sum .
-
 # Copy the Go Modules manifests
 COPY . .
 # Install dependencies
@@ -14,12 +10,12 @@ RUN go mod vendor
 # Build cmd
 RUN CGO_ENABLED=0 GO111MODULE=on go build -mod vendor -o /plugin main.go
 
-# # we use alpine for easier debugging
-# FROM alpine
+# we use alpine for easier debugging
+FROM alpine
 
-# # Set root path as working directory
-# WORKDIR /
+# Set root path as working directory
+WORKDIR /
 
-# COPY --from=builder /plugin .
+COPY --from=builder /plugin .
 
-# ENTRYPOINT ["/plugin"]
+ENTRYPOINT ["/plugin"]
