--- a/.e2e/chainsaw-tests.yaml
+++ b/.e2e/chainsaw-tests.yaml
@@ -22,3 +22,28 @@ spec:
                 - my-virtual-namespace
               matchLabels:
                 vcluster.loft.sh/label-vcluster-x-a172cedcae: example-app
+---
+apiVersion: chainsaw.kyverno.io/v1alpha1
+kind: Test
+metadata:
+  name: pm-with-ns-selector
+spec:
+  steps:
+  - try:
+    - assert:
+        resource:
+          apiVersion: monitoring.coreos.com/v1
+          kind: PodMonitor
+          metadata:
+            name: pm-with-ns-selector-x-default-x-vcluster
+            namespace: default
+          spec:
+            namespaceSelector: {}
+            selector:
+              matchExpressions:
+              - key: vcluster.loft.sh/namespace
+                operator: In
+                values:
+                - my-virtual-namespace
+              matchLabels:
+                vcluster.loft.sh/label-vcluster-x-a172cedcae: example-app
