--- a/.e2e/vcluster-resources.yaml
+++ b/.e2e/vcluster-resources.yaml
@@ -15,3 +15,19 @@ spec:
       app: example-app
   endpoints:
   - port: web
+---
+apiVersion: monitoring.coreos.com/v1
+kind: PodMonitor
+metadata:
+  name: pm-with-ns-selector
+  namespace: default
+  labels:
+    team: frontend
+spec:
+  namespaceSelector:
+    any: false
+    matchNames:
+    - my-virtual-namespace
+  selector:
+    matchLabels:
+      app: example-app
