--- a/.e2e/vcluster-resources.yaml
+++ b/.e2e/vcluster-resources.yaml
@@ -17,6 +17,21 @@ spec:
   - port: web
 ---
 apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: sm-without-ns-selector
+  namespace: default
+  labels:
+    team: frontend
+spec:
+  namespaceSelector: {}
+  selector:
+    matchLabels:
+      app: example-app
+  endpoints:
+  - port: web
+---
+apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
   name: pm-with-ns-selector
