--- a/codefresh.yaml
+++ b/codefresh.yaml
@@ -5,35 +5,43 @@ version: "1.0"
 mode: parallel
 # Stages can help you organize your steps in stages
 stages:
+  - "prepare"
   - "clone"
   - "build"
   - "test"
 
 steps:
-  clone:
-    title: "Cloning repository"
-    type: "git-clone"
-    repo: "codefresh-contrib/vcluster-prometheus-operator-plugin"
-    revision: "${{CF_BRANCH}}"
-    git: "codefresh-git-integration-contrib"
-    stage: "clone"
 
-  export_image_tag:
+  preapre_env:
     title: "Export image tag"
     type: freestyle
-    stage: build
+    stage: prepare
     image: alpine
     commands:
     - |
       export isRelease="${{RELEASE}}"
       if [[ "$isRelease" == "true" ]]; then
         export IMAGE_TAG="${{CF_RELEASE_TAG}}"
+        export CLONE_REVISION="${{CF_RELEASE_TAG}}"
       else
         export IMAGE_TAG="${{CF_BRANCH_TAG_NORMALIZED_LOWER_CASE}}"
+        export CLONE_REVISION="${{CF_BRANCH}}"
       fi
 
-      cf_export IMAGE_TAG
+      cf_export IMAGE_TAG CLONE_REVISION
 
+  clone:
+    title: "Cloning repository"
+    type: "git-clone"
+    repo: "codefresh-contrib/vcluster-prometheus-operator-plugin"
+    revision: "${{CLONE_REVISION}}"
+    git: "codefresh-git-integration-contrib"
+    stage: "clone"
+    when:
+      steps:
+      - name: preapre_env
+        on:
+        - success
 
   build_v1:
     title: "Build v1"
@@ -55,9 +63,6 @@ steps:
     when:
       steps:
       - name: clone
-        on:
-        - success
-      - name: export_image_tag
         on:
         - success
 
@@ -86,10 +91,6 @@ steps:
         - name: build_v1
           on:
           - success
-        - name: export_image_tag
-          on:
-          - success
-
 
   create_clusters:
       title: 'Create k3d clusters'
