--- a/v2/Dockerfile
+++ b/v2/Dockerfile
@@ -1,8 +1,8 @@
 # Build the manager binary
-FROM golang:1.23.2 as builder
+FROM golang:1.23.2 AS builder
 
 # Make sure we use go modules
-WORKDIR vcluster
+WORKDIR /vcluster
 
 # Copy the Go Modules manifests
 COPY . .
@@ -11,7 +11,7 @@ COPY . .
 RUN go mod vendor
 
 # Build cmd
-RUN CGO_ENABLED=0 GO111MODULE=on go build -mod vendor -o /plugin main.go
+RUN CGO_ENABLED=0 go build -mod vendor -o /plugin main.go
 
 # we use alpine for easier debugging
 FROM alpine
